<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_brown"
    tools:context=".AdditionalInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/annoucement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/introduction"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/authorWheel"
                android:layout_width="208dp"
                android:layout_height="152dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/author_wheel" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="25dp"
                android:layout_weight="2"
                android:text="This is the author's symbol substitution cipher. The symbols are hidden in many episodes in the series and also in the Journal 3\nNote: The symbol for Q, X and Z are currently unknown."
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/billTriangle"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/bill_triangle" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="This is the Bill's symbol substitution cipher. The symbol are similar to the author's symbol substitution cipher. The symbols are hidden in some episodes in Season 2 of the series and also in the Journal 3"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="10dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/bill_ver2_wheel" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:text="This is combined symbol substitution cipher. Bill uses another cipher to further hide his sinister teasing notes and messages from Ford. Many of the symbols are shared with Bill's symbol substitution cipher and the Author's symbol substitution cipher. The symbols decode to numbers, and from there use A1Z26."
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginRight="10dp"
            android:gravity="center_horizontal"
            android:text="@string/link"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>